chore: bug fixed swagger
