# src/routes.ts
@@ -5,11 +5,11 @@ const router = Router();
 
 router.get("/stores", StoresController.getStores);
 router.get("/stores/:id", StoresController.getStoreById);
-router.post("/stores", StoresController.createStore);
-router.put("/stores/:id", StoresController.updateStore);
+router.get("/stores/:id/:date/isOpen", StoresController.storeIsOpen);
+router.post("/stores/create", StoresController.createStore);
+router.put("/stores/update/:id", StoresController.updateStore);
 router.put("/stores/:id/business-hours", StoresController.updateBusinessHours);
 router.put("/stores/:id/inactive", StoresController.inactiveStore);
-router.get("/stores/:id/:date/isOpen", StoresController.storeIsOpen);
 router.delete("/stores/:id", StoresController.storeDelete);
 
 export default router;
